@@ -1,6 +1,6 @@
 #!/bin/sh
 #-----------------------------------------------------------------------------
-#	 $Id: webexamples.sh,v 1.18 2008-12-06 02:40:10 guru Exp $
+#	 $Id: webexamples.sh,v 1.19 2009-02-13 03:25:24 guru Exp $
 #
 #	webexamples.sh - Automatic generation of the GMT examples pages
 #
@@ -11,7 +11,7 @@
 #
 #	Script that creates the examples web pages from
 #	the scripts files and resulting postscript files
-#	Files created in the local www directory:
+#	Files created in the local www directory in website:
 #
 #	gmt/gmt_examples.html
 #	gmt/examples/gmt_example_??.html
@@ -38,8 +38,8 @@ if [ ! -d src ]; then
 fi
 
 date=`date`
-mkdir -p www/gmt
-cd www/gmt
+mkdir -p website/www/gmt
+cd website/www/gmt
 
 cat << EOF > gmt_examples.html
 <!-- gmt_example.html - Automatically generated by webexamples.sh on $date -->
@@ -174,11 +174,11 @@ while [ $i -le $n_examples ]; do
 
 #	Extract Bourne shell example script and rename
 
-	\cp -f ../../../../examples/$dir/job${number}.sh job${number}.sh.txt
+	\cp -f ../../../../../examples/$dir/job${number}.sh job${number}.sh.txt
 
 #	Copy over the example PS file
 
-	\cp ../../../../examples/$dir/example_${number}.ps .
+	\cp ../../../../../examples/$dir/example_${number}.ps .
 
 #	TMP FIX FOR EX19 SINCE GS IS FUCKED
 	if [ $number -eq 19 ]; then
@@ -206,13 +206,13 @@ cat << EOF > gmt_example_${number}.html
 <img src="example_${number}_50dpi.png">
 </A><P></CENTER>
 EOF
-	tail +2 ../../../../website/job${number}.txt >> gmt_example_${number}.html
+	tail +2 ../../../../../website/job${number}.txt >> gmt_example_${number}.html
 
 cat << EOF >> gmt_example_${number}.html
 <p>
 <A HREF="job${number}.sh.txt"><IMG SRC="../../gmt_script.gif" ALT="RETURN">View GMT script.</A>
 <A HREF="example_${number}.ps"><IMG SRC="../../gmt_ps.gif" ALT="RETURN">Download PostScript version.</A>
-<A HREF="../../gmt_examples.html"><IMG SRC="../../gmt_back.gif" ALT="RETURN">Back</A>
+<A HREF="../../gmt_examples.html"><IMG SRC="../../doc/html/gmt_back.gif" ALT="RETURN">Back</A>
 </BODY>
 </HTML>
 EOF
